# pixelmatch

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  params.yaml  pyproject.toml  requirements.txt  run_benchmark.py
.github/workflows/: ci.yml
data/: README.md  generate_catalog.py  generate_interactions.py
reports/: benchmark_output.json  benchmark_summary.md
src/pixelmatch/: __init__.py
src/pixelmatch/encoders/: __init__.py  feature_extractor.py  image_encoder.py  multimodal_encoder.py  text_encoder.py
src/pixelmatch/evaluation/: __init__.py  benchmarking.py  cold_start.py  metrics.py
src/pixelmatch/monitoring/: __init__.py  latency.py
src/pixelmatch/ranking/: __init__.py  ltr.py
src/pixelmatch/recommendation/: __init__.py  content_based.py  hybrid.py  matrix_factorization.py  two_tower.py
src/pixelmatch/retrieval/: __init__.py  bm25_baseline.py  faiss_index.py  hybrid_retriever.py  tfidf_baseline.py
src/pixelmatch/serving/: __init__.py  server.py
tests/: conftest.py  test_encoders.py  test_recommendation.py  test_retrieval.py
