[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelmatch"
version = "0.1.0"
description = "PixelMatch — Multi-Modal Visual Search & Recommendation Engine"
authors = [{ name = "Ronish George" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["search", "recommendation", "multimodal", "faiss", "clip", "two-tower"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: marks tests requiring GPU (deselect on CI)",
    "integration: marks integration tests",
]

[tool.coverage.run]
branch = true
source = ["src/pixelmatch"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
